Complete sample class to connect and query database using ActiveJDBC